# CLI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/CLI/: cli.md
docs/CLI/Classes/: CLI.md  CLIException.md
docs/CLI/Constructors/: constructors.md
docs/CLI/Getters/: getActiveFlagAmong.md  getActiveFlagIn.md  getActiveFlags.md  getActiveFlagsAndPositions.md  getActiveFlagsAndValues.md  getActiveSubcommand.md  getActiveSubcommandEndPosition.md  getAllActiveFlagsAmong.md  getAllActiveFlagsIn.md  getAllValuesOf.md  getAnyValue.md  getArgumentAt.md  getArgumentCount.md  getArguments.md  getFlagPosition.md  getFlags.md  getProgramName.md  getStartPosition.md  getSubcommands.md  getValidFlags.md  getValidSubcommands.md  getValueOf.md
docs/CLI/Lookup/: areFlagsActive.md  isActiveSubcommand.md  isFlagActive.md  isFlagValid.md  isSubcommandActive.md  isSubcommandValid.md  isValidFlag.md  isValidSubcommand.md  noActiveSubcommand.md
docs/CLI/Modifiers/: addFlags.md  addGlobalFlags.md  addSubcommands.md  clear.md  clearFlags.md  clearSubcommands.md  init.md  removeFlags.md  removeGlobalFlags.md  removeSubcommands.md
docs/CLI/Setters/: setArguments.md  setValidFlags.md  setValidSubcommands.md
include/: cli.hpp
src/: main.cpp
test/: CMakeLists.txt
test/src/: cli_test.cpp
